added interview answer and SQLalchemy

--- a/python_practice_for_fun.ipynb
+++ b/python_practice_for_fun.ipynb
@@ -983,7 +983,373 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "11973b96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "########SQL ALCHEMY############"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "0bd4d75f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "15f2176b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.16'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqlalchemy.__version__ # check for drivers installed or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a3c5dc2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine, MetaData, Table, Column, Integer, String\n",
+    "engine = create_engine('sqlite:///college.db',echo=True) # creating engine , echo = true for logging , returns engine object\n",
+    "#dir(engine)\n",
+    "#engine.driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "17ebd21f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02 00:00:50,543 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2021-06-02 00:00:50,548 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"studs\")\n",
+      "2021-06-02 00:00:50,549 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2021-06-02 00:00:50,549 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"studs\")\n",
+      "2021-06-02 00:00:50,550 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2021-06-02 00:00:50,551 INFO sqlalchemy.engine.Engine \n",
+      "CREATE TABLE studs (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tname VARCHAR, \n",
+      "\tlastname VARCHAR, \n",
+      "\tPRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2021-06-02 00:00:50,551 INFO sqlalchemy.engine.Engine [no key 0.00039s] ()\n",
+      "2021-06-02 00:00:50,577 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "meta = MetaData() # needed for creating tables in SQl . It holds a collection of Table objects as well as an optional binding to an Engine or Connection.\n",
+    "studs = Table(\n",
+    "   'studs',\n",
+    "    meta,\n",
+    "    Column('id',Integer,primary_key=True),\n",
+    "    Column('name',String),\n",
+    "    Column('lastname',String),\n",
+    "    ) #table creation\n",
+    "meta.create_all(engine) #creates all the tables in meta object in particular DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "946bddd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02 00:00:57,542 INFO sqlalchemy.engine.Engine INSERT INTO studs (name, lastname) VALUES (?, ?)\n",
+      "2021-06-02 00:00:57,544 INFO sqlalchemy.engine.Engine [generated in 0.00173s] ('Ravi', 'Kapoor')\n",
+      "2021-06-02 00:00:57,547 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2021-06-02 00:00:57,568 INFO sqlalchemy.engine.Engine INSERT INTO studs (name, lastname) VALUES (?, ?)\n",
+      "2021-06-02 00:00:57,569 INFO sqlalchemy.engine.Engine [cached since 0.02686s ago] ('Pavan', 'Krishna')\n",
+      "2021-06-02 00:00:57,571 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x687de08>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "ins = studs.insert().values(name = 'Ravi', lastname = 'Kapoor')\n",
+    "ins1 = studs.insert().values(name = 'Pavan', lastname = 'Krishna')#insert operation\n",
+    "conn = engine.connect() # Before performing operation first need to connect to DB\n",
+    "conn.execute(ins)\n",
+    "conn.execute(ins1) # execute insert command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "20b92210",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02 00:01:23,628 INFO sqlalchemy.engine.Engine SELECT studs.id, studs.name, studs.lastname \n",
+      "FROM studs\n",
+      "2021-06-02 00:01:23,629 INFO sqlalchemy.engine.Engine [cached since 20.59s ago] ()\n",
+      "(1, 'Ravi', 'Kapoor')\n",
+      "(2, 'Pavan', 'Krishna')\n"
+     ]
+    }
+   ],
+   "source": [
+    "sel = studs.select()# select operation\n",
+    "res = conn.execute(sel) # returns cursor object\n",
+    "studs_res = res.fetchone()\n",
+    "studs_res = res.fetchall() # fetching the data\n",
+    "\n",
+    "for res in studs_res:\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "86920c3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02 00:11:51,037 INFO sqlalchemy.engine.Engine SELECT studs.id, studs.name, studs.lastname \n",
+      "FROM studs \n",
+      "WHERE studs.lastname = ?\n",
+      "2021-06-02 00:11:51,038 INFO sqlalchemy.engine.Engine [generated in 0.00123s] ('Krishna',)\n",
+      "(2, 'Pavan', 'Krishna')\n"
+     ]
+    }
+   ],
+   "source": [
+    "sel = studs.select().where(studs.c.lastname=='Krishna')# select operation with where caluse\n",
+    "res = conn.execute(sel) # returns cursor object\n",
+    "studs_res = res.fetchall() # fetching the data\n",
+    "\n",
+    "for res in studs_res:\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b6a39558",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-02 00:16:56,208 INFO sqlalchemy.engine.Engine SELECT * FROM studs\n",
+      "2021-06-02 00:16:56,209 INFO sqlalchemy.engine.Engine [cached since 17.62s ago] ()\n",
+      "(1, 'Ravi', 'Kapoor')\n",
+      "(2, 'Pavan', 'Krishna')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import text #another way of using select statement\n",
+    "t = text(\"SELECT * FROM studs\")\n",
+    "result = conn.execute(t)\n",
+    "for res in result:\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19d1ea3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aacf2b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff5bf00d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d57640c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1cd3696",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd00f30e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "798a4434",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61c66cee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a611df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a3aac3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2be494cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "989381bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2e2389",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5146f404",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd3457e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24a7e573",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd993f56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6b71d43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e94a779",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1eb94ea",
    "metadata": {},
    "outputs": [],
    "source": []
