Added Interview Questions and Answers

--- a/python_practice_for_fun.ipynb
+++ b/python_practice_for_fun.ipynb
@@ -902,7 +902,7 @@
     }
    ],
    "source": [
-    "# re - findall , search , match ,sub,split\n",
+    "# re - findall , search , match ,sub,split,compile\n",
     "# matchobject - group(),span(),start(),end(),string\n",
     "#https://www.programiz.com/python-programming/regex\n",
     "\n",
@@ -1196,8 +1196,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "19d1ea3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data class - \n",
+    "#Data classes are available for Python 3.7 or above. You can use data classes as a data container but not only. \n",
+    "#Data classes also write boiler-plate code for you and simplify the process of creating classes\n",
+    "from dataclasses import dataclass,field,asdict,astuple\n",
+    "\n",
+    "@dataclass(frozen=False,repr=True,order=True,unsafe_hash=True)\n",
+    "class person:\n",
+    "    greatervalue:int = field(init=False) #provding restrictions for a particular attribute\n",
+    "    name:str\n",
+    "    age:int\n",
+    "    job:str\n",
+    "    exp:int\n",
+    "    def __post_init__(self):#will be executed exactly after constructer\n",
+    "        self.greatervalue = self.age * self.exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d16b8ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "{'greatervalue': 100, 'name': 'pavan', 'age': 20, 'job': 'Developer', 'exp': 5}\n",
+      "(100, 'pavan', 20, 'Developer', 5)\n",
+      "person(greatervalue=100, name='pavan', age=20, job='Developer', exp=5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = person('pavan',20,'Developer',5)\n",
+    "p1 = person('pavan',20,'Developer',4)\n",
+    "print(p1==p)\n",
+    "#print(p)\n",
+    "#hash(p)\n",
+    "#p.age=20 # error when frozen = true\n",
+    "p2 = person('pavan',20,'Developer',50)\n",
+    "p3 = person('pavan',30,'Developer',15)\n",
+    "print(p2>p)\n",
+    "p2.age=40\n",
+    "hash(p2)\n",
+    "print(asdict(p)) #get dict for respective object\n",
+    "print(astuple(p)) #get value as tuple for the object\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "bce3d93f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tuple unpacking\n",
+    "a = 1,2,3\n",
+    "(a1,a2,a3) = 1,2,3\n",
+    "a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b29d913c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list unpacking\n",
+    "a=[1,2,3]\n",
+    "a1,a2,a3 = a\n",
+    "a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "f8698080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is pavan\n",
+      "my name is pavan "
+     ]
+    }
+   ],
+   "source": [
+    "#sep,end,flush\n",
+    "\n",
+    "print('my','name','is','pavan',sep=' ')\n",
+    "print('my',end=\" \",flush=True)\n",
+    "print('name',end=\" \",flush=True)\n",
+    "print('is',end=\" \",flush=True)\n",
+    "print('pavan',end=\" \",flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "f584508b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In dict to avoid key error use get method , if key not present it will return null ,also can specify default value\n",
+    "d = {'a' : 2 , 'b' : 3 }\n",
+    "d.get('c')\n",
+    "print(d.get('c'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "ca172ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c:\\\\users\\\\pavan\\\\appdata\\\\local\\\\programs\\\\python\\\\python38-32',\n",
+       " 'c:\\\\users\\\\pavan\\\\appdata\\\\local\\\\programs\\\\python\\\\python38-32\\\\lib\\\\site-packages']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#location where all modules are installed\n",
+    "import site\n",
+    "site.getsitepackages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e84e1482",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2759ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d02a8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d29a2be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4550db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30bcbb11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f6b6fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97fbfcf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af84fb8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2741e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5cc7838",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195152f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd04bdcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f01f0c1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6771893b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68a69960",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4a3065c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2109d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af2599eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcff49ec",
    "metadata": {},
    "outputs": [],
    "source": []
