added collections module

--- a/python_practice_for_fun.ipynb
+++ b/python_practice_for_fun.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "ae53deb1",
    "metadata": {},
    "outputs": [
@@ -201,18 +201,36 @@
      "output_type": "stream",
      "text": [
       "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
       "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "Background Processmain therad completed\n",
       "Background Process\n",
       "Background Process\n",
       "Background Process\n",
       "Background Process\n",
       "Background Process\n",
-      "main therad completedBackground Process\n",
       "Background Process\n",
       "Background Process\n",
       "Background Process\n",
-      "\n",
-      "Background Process\n"
+      "Background Process\n",
+      "\n"
      ]
     }
    ],
@@ -220,16 +238,27 @@
     "#threading - daemon thread and non daemon thread\n",
     "#daemon thread - background process , will terminate when main thread is terminated\n",
     "from threading import Thread\n",
+    "import threading\n",
+    "th = threading.Lock() \n",
+    "\n",
     "\n",
     "def add (num1,num2):\n",
-    "    print(num1+num2) \n",
+    "    th.acquire() #locking the resource\n",
+    "    for _ in range(10):\n",
+    "        print(num1+num2)\n",
+    "    th.release()\n",
     "\n",
     "def mul(num2,num3):\n",
-    "    print(num2*num3) \n",
+    "    th.acquire()\n",
+    "    for _ in range(10):\n",
+    "        print(num2*num3)\n",
+    "    th.release()\n",
     "\n",
     "def ex_demon():\n",
+    "    th.acquire()\n",
     "    for i in range(10):\n",
     "        print(\"Background Process\")\n",
+    "    th.release()\n",
     "\n",
     "t1 = Thread(target=add, args=(2,3))\n",
     "t2 = Thread(target=mul, args=(2,3))\n",
@@ -242,7 +271,56 @@
     "\n",
     "t1.join()\n",
     "t2.join()\n",
-    "print('main therad completed')"
+    "#th.acquire()\n",
+    "print('main therad completed')\n",
+    "#th.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5d95c390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pr1 8064\n",
+      "pr2 9804\n",
+      "main process id29532\n",
+      "done\n",
+      "__main__\n"
+     ]
+    }
+   ],
+   "source": [
+    "#multiprocessing\n",
+    "import multiprocessing\n",
+    "import os\n",
+    "\n",
+    "def p1():\n",
+    "    print('p1 id',os.getpid())\n",
+    "\n",
+    "def p2():\n",
+    "    print('p2 id',os.getpid())\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    pr1 = multiprocessing.Process(target=p1)\n",
+    "    pr2 = multiprocessing.Process(target=p2)\n",
+    "\n",
+    "    pr1.start()\n",
+    "    pr2.start()\n",
+    "\n",
+    "    print('pr1',pr1.pid)\n",
+    "    print('pr2',pr2.pid)\n",
+    "\n",
+    "    pr1.join()\n",
+    "    pr2.join()\n",
+    "\n",
+    "    print('main process id'+ str(os.getpid()))\n",
+    "    print('done')"
    ]
   },
   {
@@ -1372,43 +1450,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e84e1482",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 2,\n",
+       "         2: 2,\n",
+       "         3: 3,\n",
+       "         5: 1,\n",
+       "         6: 2,\n",
+       "         7: 2,\n",
+       "         8: 2,\n",
+       "         90: 1,\n",
+       "         45: 1,\n",
+       "         9: 2,\n",
+       "         0: 2,\n",
+       "         12: 1,\n",
+       "         456: 1,\n",
+       "         78: 1})"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#collection objects\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "count_dict = Counter([1,2,3,5,6,7,8,90,1,2,3,45,6,7,8,9,0,12,3,456,78,9,0])\n",
+    "count_dict # key value pairs with key= each value from iterable and value = count of each value in iterable"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "8bae5ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('name', 'Pavan'), ('value', 'sdfsdfsd'), ('addr', 'test1')])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "od = OrderedDict() # it remembers the order in which the keys were inserted\n",
+    "\n",
+    "od['name'] = 'Pavan'\n",
+    "od['value'] = 'test'\n",
+    "od['addr'] = 'test1'\n",
+    "od['value'] = \"sdfsdfsd\"\n",
+    "od"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6a059af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int, {4: 1, 34: 0})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "df = defaultdict(int) # if key is not present instead of throwing key error \n",
+    "\n",
+    "df[4] =1\n",
+    "df[34]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "c2759ba0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'c': 3, 'd': 4, 'a': 1, 'b': 2, 'aa': 2}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import ChainMap\n",
+    "\n",
+    "d = {'a':1,'b':2}\n",
+    "c = {'c':3,'d':4}\n",
+    "\n",
+    "ch = ChainMap(d,c) #used to combine multiple dict into one dict\n",
+    "ch1 = ch.new_child({'aa':2})\n",
+    "dict(ch1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "1d02a8ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student(name='pavan', age=20, city='Kasragod')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "stud = namedtuple('Student',['name','age','city'])\n",
+    "\n",
+    "s1 = stud('pk',20,'Bangalore')\n",
+    "\n",
+    "li = ['pavan',20,'Kasragod']\n",
+    "\n",
+    "s2 = stud._make(li)\n",
+    "s3 = stud._asdict({'name':'pk','age':20,'city':'Bangalore'}) \n",
+    "s1.name\n",
+    "s1.age\n",
+    "s1.city\n",
+    "s1[1]\n",
+    "s2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "3d29a2be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([20, 1, 2, 3, 4, 5, 10])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "deque([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# deque is the optimized list for quicker append and pop operations from both sides of the container. \n",
+    "#It provides O(1) time complexity for append and pop operations as compared to list with O(n) time complexity.\n",
+    "from collections import deque\n",
+    "\n",
+    "d = deque([1,2,3,4,5]) # we can append and pop from both sides\n",
+    "\n",
+    "d.append(10)\n",
+    "d.appendleft(20)\n",
+    "print(d)\n",
+    "d.pop()\n",
+    "d.popleft()\n",
+    "d.popleft()\n",
+    "d"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "bb4550db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aaaaa'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#customising the dict,list,string methods according needs\n",
+    "from collections import UserDict,UserList,UserString\n",
+    "\n",
+    "class customdict(UserDict):\n",
+    "    def get(self,s=None,t=None):\n",
+    "        if s and t:\n",
+    "            return s*t\n",
+    "        else:\n",
+    "            return none\n",
+    "d = customdict({'a':3})\n",
+    "d.get('a',5)"
+   ]
   },
   {
    "cell_type": "code",
