--- a/Interview Problems.ipynb
+++ b/Interview Problems.ipynb
@@ -175,27 +175,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b6ab392",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort without using sort function\n",
+    "\n",
+    "li = [1,3,4,0,2,0]\n",
+    "\n",
+    "op = []\n",
+    "while(li):\n",
+    "    minimum = min(li)\n",
+    "    count = li.count(minimum)\n",
+    "    while(count):\n",
+    "        op.append(minimum)\n",
+    "        li.remove(minimum)\n",
+    "        count = count -1\n",
+    "op"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "66e63294",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'adefbclmjk'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find largest substring in string\n",
+    "s='abcadefbclmjk'\n",
+    "i=0\n",
+    "li = 0\n",
+    "op_string = \"\"\n",
+    "sub_string = \"\"\n",
+    "while(i<len(s)):\n",
+    "    j=i\n",
+    "    while(j<len(s)):\n",
+    "        if s[j] not in sub_string:\n",
+    "            sub_string = sub_string + s[j]\n",
+    "            j=j+1\n",
+    "        else:\n",
+    "            if len(sub_string)> li:\n",
+    "                li = len(sub_string)\n",
+    "                op_string = sub_string\n",
+    "            sub_string = \"\"\n",
+    "            break;\n",
+    "    i = i+1\n",
+    "            \n",
+    "op_string"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "1834d1ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "0\n",
+      "1\n",
+      "c\n",
+      "1\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'd', 'f', 'x', 'e', 'z']"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter,defaultdict\n",
+    "str1 = \"abcdfxa\"\n",
+    "str2 = \"abcecaz\"\n",
+    "counts_str1 = Counter(str1)\n",
+    "counts_str2 = Counter(str2)\n",
+    "op = []\n",
+    "def checkcount(temp_dict):\n",
+    "    global op\n",
+    "    for i  in list(temp_dict.keys()):\n",
+    "        count1 = counts_str1.get(i,-1)\n",
+    "        count2 = counts_str2.get(i,-1)\n",
+    "        if count1 == count2:\n",
+    "            pass\n",
+    "        elif count1 == -1:\n",
+    "            op.extend(list(i*count2))\n",
+    "        elif count2 == -1:\n",
+    "            op.extend(list(i*count1))\n",
+    "        else:\n",
+    "            diff = abs(count1-count2)\n",
+    "            if op.count(i)!=diff:\n",
+    "                op.extend(list(i*diff))\n",
+    "                \n",
+    "if(len(str1)==len(str2)):\n",
+    "    checkcount(counts_str1)\n",
+    "    checkcount(counts_str2)\n",
+    "op    "
+   ]
   },
   {
    "cell_type": "code",
@@ -207,11 +315,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "30393d78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "op = ['a']\n",
+    "\n",
+    "op.count('b')"
+   ]
   },
   {
    "cell_type": "code",
@@ -324,11 +447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "034b0e93",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'a']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = list('a'*2)\n",
+    "res"
+   ]
   },
   {
    "cell_type": "code",
