Added more questions

--- a/Interview Problems.ipynb
+++ b/Interview Problems.ipynb
@@ -307,58 +307,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "91a3fb61",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "id": "30393d78",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "4\n",
+      "7\n",
+      "3\n",
+      "6\n",
+      "5\n",
+      "0\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "6\n",
+      "4\n",
+      "2\n",
+      "0\n",
+      "8\n",
+      "0\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "op = ['a']\n",
-    "\n",
-    "op.count('b')"
+    "#xor gate to find missing pair\n",
+    "a=[2,2,4,3,4,5,3,5,3,3,1,1,6,2,6,2,8,8]\n",
+    "a_sorted=sorted(a)\n",
+    "res=0\n",
+    "for i in range(0,len(a)):\n",
+    "    res = res^a[i]\n",
+    "    print(res)  \n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b331f714",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3]\n",
+      "[1, 2]\n",
+      "[1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reverse array using recurrsion\n",
+    "arr=[1,2,3,4,5,6]\n",
+    "def reverse(arr):\n",
+    "    if len(arr)==0:\n",
+    "        return []\n",
+    "    elif len(arr)==1:\n",
+    "        return arr\n",
+    "    else:\n",
+    "        b = [arr.pop()] + reverse(arr)\n",
+    "        return b\n",
+    "reverse(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "d7366d07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 6, 5, -1, -2, -3, -2, -6]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#group postive and negative number together\n",
+    "arr = [-1,-2,-3,5,4,6,-2,5,-6]\n",
+    "pos = []\n",
+    "neg = []\n",
+    "for i in arr:\n",
+    "    if i >=0:\n",
+    "        pos.append(i)\n",
+    "    else:\n",
+    "        neg.append(i)\n",
+    "pos + neg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "960c463e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=[1,2,3,4]\n",
+    "print(arr.pop())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "312c3323",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([2, 2, 3],)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ([1,2,3],)\n",
+    "a[0][0]=2\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
